kubernetes/kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-instance-deployment
spec:
  selector:
    matchLabels:
      app: jenkins-instance
  template:
    metadata:
      labels:
        app: jenkins-instance
    spec:
      containers:
        - name: jenkins-instance
          image: arvadas/docker_repo:jenkins-instance
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
