kubernetes/kubernetes-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-instance-service
  labels:
    app: jenkins-instance
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 5050
      nodePort: 32000
  selector:
    app: jenkins-instance
