kubernetes/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-instance-service
  labels:
    app: jenkins-instance
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 5050
      protocol: TCP
  selector:
    app: jenkins-instance
